Perma (build specific) Windows shippable /html/canvas/element/path-objects/2d.path.isPointInPath.basic.html | Verify the winding rule in isPointInPath works for for rect path. when 82 becomes Late Beta on 2020-10-02
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox80 | --- | unaffected |
| firefox81 | --- | unaffected |
| firefox82 | --- | wontfix |
| firefox83 | --- | wontfix |
| firefox84 | - | wontfix |
| firefox85 | --- | fixed |
People
(Reporter: aryx, Assigned: lsalzman)
References
Details
(Keywords: intermittent-failure, Whiteboard: [stockwell unknown])
Attachments
(1 file)
central-as-late-beta simulation: https://treeherder.mozilla.org/#/jobs?repo=try&group_state=expanded&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel%2Crunnable&revision=b3df62b3b06a4b9819544df565fbf349cea4be02&selectedTaskRun=dDbOUoY2TTinZ7BXagZ5EA.0
Log: https://treeherder.mozilla.org/logviewer.html#?job_id=315096640&repo=try
This failed on Windows 10 both for the simulation DevEdition and Beta build but not on Windows 7. From past experiences, the issue might be gone in the next late beta simulation.
Updated•5 years ago
|
| Reporter | ||
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 8•5 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Comment 10•5 years ago
|
||
Comment 11•5 years ago
|
||
Change the status for beta to have the same as nightly and release.
For more information, please visit auto_nag documentation.
| Comment hidden (Intermittent Failures Robot) |
Comment 13•5 years ago
|
||
Jim, this has been causing frequent failures on Win10 for the last couple cycles. Can you help find someone to look into this?
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Comment 17•5 years ago
|
||
I tried to bisect this, but the wpt test stopped working completely for me at some point, so that proved fruitless.
So, I then started bisecting with a cut down bit of JS.
Eventually I came to the conclusion that this has never passed (i.e. it returns true) when using PathD2D::ContainsPoint.
With remote canvas we use a PathSkia in the content process and it returns false the same as Chrome and passes.
Assuming we think that PathSkia is correct I guess we could add the check from there to the top of PathD2D::ContainsPoint.
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 20•5 years ago
|
||
Updated•5 years ago
|
Comment 21•5 years ago
|
||
Comment 22•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Updated•5 years ago
|
Updated•5 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Description
•