Bug 1663703 - only allow PathD2D::ContainsPoint to proceed if transform is invertible. r=bobowen

Differential Revision: https://phabricator.services.mozilla.com/D99177